# internal/api/dto/loanSimulationResponse_dto.go
@@ -1,0 +1,8 @@
+package dto
+
+import "github.com/Jonattas-21/loan-engine/internal/domain/entities"
+
+type LoanSimulationResponse_dto struct {
+	LoanSimulations  []entities.LoanSimulation
+	ErrorSimulations []string
+}
